# data-collect

./: .gitignore  CMakeLists.txt  D435_intrinsics  Dockerfile  README.md  d435-intrisics.cpp  data-collect.sh  data-transfer.sh  data_collect.cfg  docker-compose.debug.yml  imgui.ini  intrinsic.txt  intrinsics.cpp  intrisics.hpp  lab1210_1.txt  lab1210_1ex.txt  leak_monitor.sh  log.csv  log.txt  main.cpp  test-d435.txt
CameraCalibration/: README.md  cameraCalibration  cameraCalibration.cpp  cameraCalibration.py  cameraCalibrationWithUndistortion  cameraCalibrationWithUndistortion.cpp  coeff_wud.txt
CameraCalibration/build.old/: Makefile
CameraCalibration/calibio/: CMakeLists.txt  camera_params.cpp
CameraCalibration/calibio/data/: calib_parameters.json
CameraCalibration/images/exports/: camera_0_K.json  camera_0_mapU.exr  camera_0_mapV.exr  camera_0_mapX.exr  camera_0_mapY.exr  d435_data  lab_calib.json
D435-intrinsics-tool/: d435-intrisics.cpp  main.cpp
Debug/: CMakeCache.txt  D435_intrinsics  Makefile  cmake_install.cmake
DyCalibResult/143322070144/DC1/: log.txt
build1/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/: CMakeCache.txt  D435_intrinsics  Makefile  cmake_install.cmake
build3/: CMakeCache.txt  D435_intrinsics  Makefile  cmake_install.cmake
build_aarch64/: CMakeCache.txt  D435_intrinsics  Makefile  cmake_install.cmake  intrinsic.txt
d435-recod-tool/d435_recorder/: CMakeLists.txt  README.md  d435_recorder.cpp  rs_d435.hpp
d435-recod-tool/d435_recorder/build1/: Makefile  d435_recorder
d435-recod-tool/d435_recorder/build_aarch64/: Makefile  d435_recorder
leak-sensor/: ard2pi.py
leak-sensor/leak/: leak.ino
rs-recod/d435_recorder/: CMakeLists.txt  d435_recorder.cpp  rs_d435.hpp
rs-recod/d435_recorder/build1/: CMakeCache.txt  cmake_install.cmake  intrinsics.txt
rs-recod/d435_recorder/build_aarch64/: CMakeCache.txt  cmake_install.cmake
rs-recod/recorder/: CMakeLists.txt  rs-record.cpp
(+6 files in other folders)
